--- a/DATN_F21/src/main/resources/templates/viewsUser/checkout.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/checkout.html
@@ -41,47 +41,22 @@
                                 <h4 class="title-2">Chi tiết thanh toán</h4>
                                 <div class="ltn__checkout-single-content-info">
                                     <form action="#">
-                                        <h6>Thông tin cá nhân</h6>
                                         <div class="row">
-                                            <div class="col-md-6">
-                                                <div class="input-item input-item-name ltn__custom-icon">
-                                                    <input type="text" name="ltn__name" placeholder="Hờ và tên"
-                                                        id="txtHoten" disabled="disabled">
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <div class="input-item input-item-email ltn__custom-icon">
-                                                    <input type="email" name="ltn__email" placeholder="Email"
-                                                        id="txtEmail" disabled="disabled">
-                                                </div>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <div class="input-item input-item-phone ltn__custom-icon">
-                                                    <input type="text" name="ltn__phone" placeholder="Số điện thoại"
-                                                        id="txtSdt" disabled="disabled">
-                                                </div>
-                                            </div>
-                                            
-                                        </div>
-                                        <div class="row">
-                                           
                                             <div class="col-lg-12 col-md-12">
                                                 <h6>ĝịa chỉ</h6>
                                                 <div class="row">
                                                     <div class="col-md-12">
                                                         <div class="input-item">
-                                                            <input type="text" placeholder="ĝịa chỉ của bạn"
-                                                                disabled="disabled">
+                                                            <select name="" id="">
+                                                                <option value=""> helli</option>
+                                                                <option value=""> helli</option>
+                                                                <option value=""> helli</option>
+                                                            </select>
                                                         </div>
                                                     </div>
                                                 </div>
                                             </div>
-                                            <div class="col-lg-12 col-md-12">
-                                                <button class="btn theme-btn-1 btn-effect-1 text-uppercase"
-                                                    type="submit" style="float: right">Thay đổi</button>
-                                            </div>
-                                        </div>
-                                        
+                                        </div>                                        
                                     </form>
                                 </div>
                             </div>
