--- a/DATN_F21/src/main/resources/templates/viewsUser/cart.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/cart.html
@@ -74,6 +74,12 @@
 									<td class="cart-product-remove" >xóa</td>
 								</tr>
 							</tbody>
+							<tbody>
+								<tr>
+								<th>Tổng cộng:</th>
+								<td>{{cart.amount | number : 2}}đ</td>
+							</tr>
+							</tbody>
 							</table>
 								<div class="btn-wrapper text-right">
 									<a href="/index/checkout" class="theme-btn-1 btn btn-effect-1">Tiến hành thanh
