--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/order.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/order.html
@@ -35,7 +35,7 @@
 									</th:block>
 								</td>
 		                        <td>[[${item.totalamount}]]</td>
-		                        <td><a th:href="@{|/account/edit/${item.id}|}">Xem</a></td>
+		                        <td><a th:href="@{|/account/editorder/${item.id}|}">Xem</a></td>
 		                    </tr>
 		                    
 		                </tbody>
