--- a/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/_menu.html
@@ -8,6 +8,7 @@
 				<a href="/account/order">Đơn Hàng<i class="fas fa-file-alt"></i></a>
 				<a href="/account/wallet">Ví Điện Tử<i class="fas fa-money-bill"></i></a>
 				<a href="/account/wallet/topup">Nạp Tiền<i class="fas fa-money-bill"></i></a>
+				<a href="/account/transaction">Lịch sử giao dịch<i class="fas fa-money-bill"></i></a>
 				<a href="#">Đăng Xuất<i class="fas fa-sign-out-alt"></i></a>
 			</div>
 		</div>
