--- a/DATN_F21/src/main/resources/templates/viewsUser/cart.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/cart.html
@@ -76,7 +76,7 @@
 							</tbody>
 							<tbody>
 								<tr>
-								<th>Tổng cộng:</th>
+								<th>Tổng tiền cần thanh toán</th>
 								<td>{{cart.amount | number : 2}}đ</td>
 							</tr>
 							</tbody>
