--- a/DATN_F21/src/main/resources/templates/layoutAdmin/_menu.html
+++ b/DATN_F21/src/main/resources/templates/layoutAdmin/_menu.html
@@ -21,29 +21,49 @@
 					</li>
 				</ul>
 				<ul class="nav-right">
-					<li class="header-notification">
-						<a href="#!">
-							<i class="ti-bell"></i>
-							<span class="badge bg-c-pink"></span>
-						</a>
-						<ul class="show-notification">
-							<li>
-								<h6>Notifications</h6>
-								<label class="label label-danger">New</label>
-							</li>
-							<li>
-								<div class="media">
-									<img class="d-flex align-self-center img-radius" src="assets/images/avatar-4.jpg" alt="Generic placeholder image">
-									<div class="media-body">
-										<h5 class="notification-user">John Doe</h5>
-										<p class="notification-msg">Lorem ipsum dolor sit amet, consectetuer elit.</p>
-										<span class="notification-time">30 minutes ago</span>
+					<ul class="nav-right">
+						<li class="header-notification">
+							<a href="#!">
+								<i class="ti-bell"></i>
+								<span class="badge bg-c-pink"></span>
+							</a>
+							<ul class="show-notification">
+								<li>
+									<h6>Notifications</h6>
+									<label class="label label-danger">New</label>
+								</li>
+								<li>
+									<div class="media">
+										<img class="d-flex align-self-center img-radius" src="assets/images/avatar-4.jpg" alt="Generic placeholder image">
+										<div class="media-body">
+											<h5 class="notification-user">John Doe</h5>
+											<p class="notification-msg"> <a href="#">Lorem ipsum dolor sit amet, consectetuer elit.</a></p>
+											<span class="notification-time">30 minutes ago</span>
+										</div>
 									</div>
-								</div>
-							</li>
-							
-						</ul>
-					</li>
+								</li>
+								<li>
+									<div class="media">
+										<img class="d-flex align-self-center img-radius" src="assets/images/avatar-3.jpg" alt="Generic placeholder image">
+										<div class="media-body">
+											<h5 class="notification-user">Joseph William</h5>
+											<p class="notification-msg"><a href="#">Lorem ipsum dolor sit amet, consectetuer elit.</a></p>
+											<span class="notification-time">30 minutes ago</span>
+										</div>
+									</div>
+								</li>
+								<li>
+									<div class="media">
+										<img class="d-flex align-self-center img-radius" src="assets/images/avatar-4.jpg" alt="Generic placeholder image">
+										<div class="media-body">
+											<h5 class="notification-user">Sara Soudein</h5>
+											<p class="notification-msg">Lorem ipsum dolor sit amet, consectetuer elit.</p>
+											<span class="notification-time">30 minutes ago</span>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</li>
 					<li class="user-profile header-notification"><a href="#!">
                         <img th:src="@{|/img/cai.jpg|}" class="img-thumbnail rounded-circle" width="80px" height="60px" alt="">
                         Admin
