--- a/DATN_F21/src/main/resources/templates/LayoutUser/_footer.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_footer.html
@@ -31,7 +31,7 @@
 						</div>
 					</div>
 					<div class="grid_column_3">
-						<div style="margin-left: 30px">
+						<div style="margin-left: 60px">
 							<h4 class="footer_heading">Hỗ trợ</h4>
 							<label for="" class="footer-item">Đăng nhập</label><br>
 							<label for="" class="footer-item">Đăng xuất</label><br>
@@ -40,11 +40,13 @@
 						</div>
 					</div>
 					<div class="grid_column_3">
-						<h4 class="footer_heading">Hướng dẫn</h4>
-						<label for="" class="footer-item">Hướng dẫn thanh toán</label>
-						<label for="" class="footer-item">Điều khoản dịch vụ</label> <br>
-						<label for="" class="footer-item">Hướng dẫn mua hàng</label> <br>
-						<label for="" class="footer-item">Hướng dẫn giao nhận</label>
+						<div style="margin-left: 10px">
+							<h4 class="footer_heading">Hướng dẫn</h4>
+							<label for="" class="footer-item">Hướng dẫn thanh toán</label><br>
+							<label for="" class="footer-item">Điều khoản dịch vụ</label> <br>
+							<label for="" class="footer-item">Hướng dẫn mua hàng</label> <br>
+							<label for="" class="footer-item">Hướng dẫn giao nhận</label>
+						</div>
 					</div>
 					<div class="grid_column_3">
 						<h4 class="footer_heading">Chính sách</h4>
