--- a/DATN_F21/src/main/resources/templates/LayoutUser/index.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/index.html
@@ -28,6 +28,8 @@
 
 <link href="/css/seller.css" rel="stylesheet">
 
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
 </head>
 <body  ng-app="buyer-app" ng-controller="buyer-ctrl">
@@ -62,7 +64,6 @@
 	<script src="/js/plugins.js"></script>
 	<!-- Main JS -->
 	<script src="/js/main.js"></script>
-
 
 	<script src="/app_js/buyer.js"></script>
 </body>
