--- a/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/index.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/index.html
@@ -29,10 +29,12 @@
 <!-- Trung thêm -->
 <link href="/css/mycss.css" rel="stylesheet">
 
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
 
 </head>
-<body ng-app="buyer-app" ng-controller="buyer-ctrl">
+<body ng-app="buyer-app">
 	<div class="body-wrapper">
 		<nav>
 			<div th:replace="/layoutUser/_menu.html"></div>
