--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/address.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/address.html
@@ -1,32 +1,83 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	th:replace="~{/layoutUser/myAccount/index :: dynamic(~{:: main})}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{/layoutUser/myAccount/index :: dynamic(~{:: main})}">
+
 <body>
-	<main>	
-		<div class="tab-pane fade active show">
-		    <div class="ltn__myaccount-tab-content-inner">
-		        <p>Các địa chỉ sau sẽ được sử dụng trên trang thanh toán</p>
-		        <div class="row">
-		            <div class="col-md-12 col-12 learts-mb-30">
-		                <h4>Địa chỉ 1: <small><a href="/account/add_address">chỉnh sửa</a></small></h4>
-		                <p>356 Thơi Nông, Nông Thôn, Thôn Nữ, Cần Thơ</p>     
-		            </div>
-		            <div class="col-md-12 col-12 learts-mb-30">
-		                <h4>Địa chỉ 2: <small><a href="/account/add_address">chỉnh sửa</a></small></h4>
-		                <p>356 Thơi Nông, Nông Thôn, Thôn Nữ, Cần Thơ</p>     
-		            </div>
-		            <div class="col-md-12 col-12 learts-mb-30">
-		                <h4>Địa chỉ 3: <small><a href="/account/add_address">chỉnh sửa</a></small></h4>
-		                <p>356 Thơi Nông, Nông Thôn, Thôn Nữ, Cần Thơ</p>     
-		            </div>
-		            <div class="col-md-12 col-12 learts-mb-30">
-		                <h4>Địa chỉ 4: <small><a href="/account/add_address">chỉnh sửa</a></small></h4>
-		                <p>356 Thơi Nông, Nông Thôn, Thôn Nữ, Cần Thơ</p>     
-		            </div>
-		            <a type="submit" href="/account/add_address" class="btn theme-btn-1 btn-effect-1 text-uppercase">THÊM ĐỊA CHỈ MỚI</a>
-		        </div>
-		    </div>
+	<main>
+		<div class="tab-pane fade active show" ng-controller="buyer-ctrl">
+			<div class="ltn__myaccount-tab-content-inner">
+				<p>Các địa chỉ sau sẽ được sử dụng trên trang thanh toán</p>
+				<div class="row" ng-repeat="item in address">
+					<div class=" col-3 learts-mb-30">
+						<div style="color: rgba(85,85,85,.8); text-align: right;">Họ Và Tên</div>
+						<div style="color: rgba(85,85,85,.8); text-align: right;">Số Điện Thoại</div>
+						<div style="color: rgba(85,85,85,.8); text-align: right;">Địa chỉ</div>
+					</div>
+					<div class=" col-6 learts-mb-30">
+						<div>{{item.fullname}}</div>
+						<div>{{item.phone}}</div>
+						<div>{{item.address}}</div>
+					</div>
+					<!-- <div class=" col-3 learts-mb-30">
+						<a th:href="@{|/account/edit_address|}" ng-click="editaddress(item)" style="margin-right: 15px;">Sửa</a>
+						<a href="/account/add_address">Xóa</a>										
+		            </div><hr> -->
+
+					<div class=" col-3 learts-mb-30">
+						<a href="#" data-toggle="modal" data-target="#exampleModal" ng-click="editaddress(item)">
+							Sửa
+						</a>
+						<a href="#" ng-click="deleteaddress(item.id)">Xóa</a>
+					</div>
+					<hr>
+
+					<!-- Modal -->
+					<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog"
+						aria-labelledby="exampleModalLabel" aria-hidden="true">
+						<div class="modal-dialog" role="document">
+							<div class="modal-content" style="border-radius: 5px;">
+								<div class="modal-header">
+									<h5 class="modal-title" id="exampleModalLabel">Cập nhật địa chỉ</h5>
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+										<span aria-hidden="true">&times;</span>
+									</button>
+								</div>
+								<div class="modal-body">
+									<!-- <legend>Địa Chỉ</legend> -->
+									<div class="row">
+										<div class="col-md-6">
+											<label>Họ và tên *:</label>
+											<input type="text" ng-model="form.fullname">
+										</div>
+										<div class="col-md-6">
+											<label>Số điện thoại *:</label>
+											<input type="text" ng-model="form.phone">
+										</div>
+										<div class="col-md-12">
+											<label>Địa chỉ cụ thể *:</label>
+											<input type="text" ng-model="form.address">
+										</div>
+										<div class="col-md-12">
+											<!-- <input type="hidden" ng-model="form.user"> -->
+											<input type="hidden" ng-model="form.id">
+										</div>
+									</div>
+									<div class="btn-wrapper text-center">
+										<a class="btn theme-btn-1 btn-effect-1 text-uppercase" ng-click="updateaddress()" type="submit">Cập nhật
+											Chỉ</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+				<hr>
+
+				<a type="submit" href="/account/addaddress" class="btn theme-btn-1 btn-effect-1 text-uppercase">THÊM ĐỊA
+					CHỈ MỚI</a>
+
+			</div>
 		</div>
 	</main>
 </body>
+
 </html>
