--- a/DATN_F21/src/main/resources/templates/LayoutUser/index.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/index.html
@@ -32,7 +32,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
 </head>
-<body  ng-app="buyer-app" ng-controller="buyer-ctrl">
+<body  ng-app="buyer-app" >
 	<div class="body-wrapper">
 		<nav>
 			<div th:replace="/layoutUser/_menu.html"></div>
