update code total

--- a/DATN_F21/src/main/resources/templates/layoutSeller/list.html
+++ b/DATN_F21/src/main/resources/templates/layoutSeller/list.html
@@ -45,6 +45,12 @@
 								data-i18n="nav.basic-components.breadcrumbs">Đơn hàng đã
 									giao</span> <span class="pcoded-mcaret"></span>
 						</a></li>
+						<li class=" "><a th:href="@{|/viewsSeller/confirmed|}"> <span
+							class="pcoded-micon"><i class="ti-angle-right"></i></span> <span
+							class="pcoded-mtext"
+							data-i18n="nav.basic-components.breadcrumbs">Đơn hàng đã
+								xác nhận</span> <span class="pcoded-mcaret"></span>
+					</a></li>
 						<li class=" "><a th:href="@{|/viewsSeller/cancel|}"> <span
 								class="pcoded-micon"><i class="ti-angle-right"></i></span> <span
 								class="pcoded-mtext"
