--- a/DATN_F21/src/main/resources/templates/viewsSeller/confirmed.html
+++ b/DATN_F21/src/main/resources/templates/viewsSeller/confirmed.html
@@ -20,7 +20,7 @@
                     </thead>
                     <tbody>
 
-                        <tr ng-repeat="detail in Order.OrderFather">
+                        <tr ng-repeat="detail in Order.OrderTwo">
                             <td scope="row">{{detail.id}}</td>
                             <td>{{detail.bookingdate}}</td>
                             <td>{{detail.user.fullname}}</td>
