--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/change_password.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/change_password.html
@@ -25,7 +25,7 @@
                               </div>
                               <spam th:text="${messenger}"></spam>
                               <div class="btn-wrapper text-center">
-                                  <button type="submit" class="btn theme-btn-1 btn-effect-1 text-uppercase">ĐỔI MẬT KHẨU</button>
+                                  <button ng-disabled="!form_changepassword.$valid" type="submit" class="btn theme-btn-1 btn-effect-1 text-uppercase">ĐỔI MẬT KHẨU</button>
                               </div>
                               <div class="by-agree ">
                                   <a href="login.html">QUYÊN MẬT KHẨU</a>
