--- a/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/_menu.html
@@ -14,6 +14,7 @@
                             <ul>
                                 <li class="menu-icon"><a href="/formAd">Admin</a></li>
                                 <li><a href="/formSeller">Seller</a></li>
+								<li th:if="${#request.remoteUser}"><a href="" style="color: white;"><i class="icon-user"></i> [[${#request.remoteUser}]]</a></li>
                             </ul>
                         </div>
 						<div class="site-logo-wrap">
