--- a/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/index.html
+++ b/DATN_F21/src/main/resources/templates/LayoutUser/myAccount/index.html
@@ -33,6 +33,8 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
 
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 <body ng-app="buyer-app">
 	<div class="body-wrapper">
