--- a/DATN_F21/src/main/resources/templates/layoutAdmin/index.html
+++ b/DATN_F21/src/main/resources/templates/layoutAdmin/index.html
@@ -50,6 +50,9 @@
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 	
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.2/angular.min.js"></script>
+
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 
 <body ng-app="admin-app" ng-controller="admin-ctrl">
