--- a/DATN_F21/src/main/resources/templates/viewsUser/myAccount/wallet.html
+++ b/DATN_F21/src/main/resources/templates/viewsUser/myAccount/wallet.html
@@ -9,33 +9,42 @@
                 <p>Bạn cần liên kết tài khoản ngân hàng với ví điện tử để có thể thanh toán hàng hóa.</p>
                 <div class="ltn__form-box">
                     <h4>Liên kết thẻ</h4>
-                    <form>
+                    <form name="form_wallet">
                         <div class="row mb-50">
                         	<div class="col-md-12">
                                 <label>Số thẻ:</label>
-                                <input ng-model="form.cardnumber" type="text" name="ltn__lastname">
+                                <span style="color: red;" ng-hide="form_wallet.txtCardnumber.$valid">Không được để trống và phải là số</span>
+                                <input class="gender" ng-model="form.cardnumber" type="number" name="txtCardnumber" required>
                             </div> 
                             <div class="col-md-12">
                                 <label>Họ tên trên thẻ:</label>
-                                <input ng-model="form.holdername" type="text" name="ltn__name">
+                                <span style="color: red;" ng-hide="form_wallet.txtHoldername.$valid">Không được để trống</span>
+                                <input ng-model="form.holdername" type="text" name="txtHoldername" required>
+                            </div>
+                            <div class="col-md-12">
+                                <label>Ngày hết hạn:</label>
+                                <span style="color: red;" ng-hide="form_wallet.dateCardwxpiry.$valid">Bạn chưa chọn ngày hết hạn</span>
+                                <input ng-model="form.cardexpiry" type="date" name="dateCardwxpiry" required>
                             </div>
                             <div class="col-md-12">
                                 <label>Mã CVV:</label>
-                                <input ng-model="form.cvv" type="text" name="ltn__lastname">
+                                <span style="color: red;" ng-hide="form_wallet.txtCvv.$valid">Không được để trống</span>
+                                <input ng-model="form.cvv" type="password" name="txtCvv" required>
                             </div>
                             <div class="col-md-12">
                             	<label>Chọn loại thẻ:</label>  
+                            	<span style="color: red;" ng-hide="form_wallet.brank.$valid">Bạn chưa chọn</span>
                                 <div class="row">                  
                                      <div class="col-md-3" ng-repeat="cb in cardbrand">
-                                     	<input ng-model="form.cardbrand" type="radio" ng-value="cb.id" name="brank"> <label>{{cb.name}}</label>
+                                     	<input ng-model="form.cardbrand" type="radio" ng-value="cb.id" name="brank" required> <label>{{cb.name}}</label>
                                      </div>
                                  </div>
                             </div>             
                         <div class="btn-wrapper" style="float:right;">
-                            <button type="submit" class="btn theme-btn-1 btn-effect-1 text-uppercase">Hủy</button>
-                            <button ng-click="save()" type="submit" class="btn theme-btn-1 btn-effect-1 text-uppercase">Lưu</button>
+                            <button ng-disabled="!form_wallet.$valid" ng-click="save()" type="submit" class="btn theme-btn-1 btn-effect-1 text-uppercase">Lưu</button>
                         </div>
                     </form>
+
                 </div>
             </div>
         </div>
